Avoid breaking with empty list ProtocolAdapterDataSampleImpl